--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=P2Lab5_GabrielZelaya
-main.class=p2lab5_gabrielzelaya.P2Lab5_GabrielZelaya
+main.class=p2lab5_gabrielzelaya.Aplicacion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
